--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,8 @@ dependencies {
     implementation 'com.yandex.android:maps.mobile:4.4.0-lite'
 
     implementation "com.google.android.gms:play-services-location:21.0.1"
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 }
