--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id 'com.android.application'
+
+    // firebase
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -26,7 +29,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    packagingOptions{
+    packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
 
@@ -59,4 +62,32 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:32.5.0')
+
+    // TODO: Add the dependencies for Firebase products you want to use
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+
+
+    // Add the dependencies for any other desired Firebase products
+    // https://firebase.google.com/docs/android/setup#available-libraries
+
+    implementation 'com.google.firebase:firebase-messaging:23.3.1'
+
+
+
+    // ONE SIGNAL
+    implementation 'com.onesignal:OneSignal:[5.0.0, 5.99.99]'
+
+
 }
+
+
+
+
+
+
+
+
