--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
+
 
     <application
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -20,21 +24,34 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".views.ChatActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".views.OrdersActivity"
             android:exported="false" />
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".views.MasterChatActivity"
             android:exported="false" />
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".views.CentersActivity"
             android:exported="false" />
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".views.MapViewActivity"
             android:exported="false" />
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -44,8 +61,48 @@
             </intent-filter>
         </activity>
         <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:name=".views.MainScreenActivity"
             android:exported="false" />
+
+
+        <service
+            android:name="firebase.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
+     See README(https://goo.gl/l4GJaQ) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/logo" />
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/main_green" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/fcm_msg_channel_id" />
+
+
+
     </application>
 
 </manifest>
+
+
+
+
+
+
+
+
+
+
+
