--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ plugins {
     id 'com.android.application' version '8.1.2' apply false
     id 'com.android.library' version '8.1.2' apply false
 
+    // firebase
+    id 'com.google.gms.google-services' version '4.4.0' apply false
 }
 
 
